# MCP-Hackathon

./: .gitignore  README.md  cred.json  gitignore  main.py  pyproject.toml  tools.py
.github/workflows/: deploy.yml
app/game-end/[code]/: page.tsx
app/review/[code]/: page.tsx
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  game_api.py  game_client_demo.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/game/[code]/: page.tsx
frontend/app/join/[code]/: page.tsx
frontend/app/statistics/[code]/: page.tsx
frontend/app/waiting/[code]/: page.tsx
frontend/components/: accuracy-chart.tsx  dual-role-manager.tsx  floating-theme-selector.tsx  game-countdown.tsx  game-preview.tsx  leaderboard-chart.tsx  player-list.tsx  question-card.tsx  quiz-mode-selector.tsx  response-time-chart.tsx  sponsors-footer.tsx  theme-provider.tsx  theme-selector.tsx
frontend/lib/api/: game-api.ts
frontend/lib/services/: game-service.ts
frontend/lib/types/: api.ts
lib/api/: game-api.ts
mcpserver/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  tools.py
